[package]
name = "fernet"
version = "0.2.1"
authors = ["Alex Gaynor <agaynor@mozilla.com>", "Ben Bangert <bbangert@mozilla.com>"]
description = "An implementation of fernet in Rust."
repository = "https://github.com/mozilla-services/fernet-rs/"
homepage = "https://github.com/mozilla-services/fernet-rs/"
license = "MPL-2.0"
readme = "README.md"
edition = "2018"


[badges]
travis-ci = { repository = "mozilla-services/fernet-rs" }

[features]
fernet_danger_timestamps = []

[package.metadata.docs.rs]
features = ["fernet_danger_timestamps"]

[dependencies]
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
byteorder = { version = "1", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
zeroize = { version = "1.0", features = ["zeroize_derive"] }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", features = ["alloc"] }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.4", default-features = false }


[dev-dependencies]
time = { version = "0.3", features = ["parsing"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
