[package]
name = "reticulum-esp32"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
embedded-hal = "0.2"
esp-idf-hal = "0.41"
esp-idf-sys = { version = "0.33", features = ["binstart"] }

[build-dependencies]
anyhow = "=1.0.71"
embuild = "=0.31.2"
