[package]
name = "reticulum-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.73"
base64 = "0.21.4"
ed25519-dalek = { version = "2.0", features = [ "digest", "rand_core" ] }
fernet = { version = "0.2", features = ["rustcrypto"], default-features = false }
hex = "0.4.3"
hkdf = "0.12.3"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10", features = ["std"] }
smol = "1.3.0"
thiserror = "1.0.48"
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }

