[package]
name = "reticulum-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration_tests"
path = "bin/integration_tests.rs"

[dependencies]
async-trait = "0.1.73"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.0", default-features = false, features = ["rand_core"] }
fernet = { path = "../fernet-rs" }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hkdf = "0.12.3"
log = "0.4.20"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
packed_struct = { version = "0.10.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["rand_chacha"] }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", optional = true, features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", optional = true, features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy", optional = true, features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }
tokio = { version = "1", optional = true, features = ["full"] }
rand_chacha = { version = "0.3.1", default-features = false }
lazy_static = { version = "1.4.0", optional = true }

[dev-dependencies]
crossbeam = "0.8.2"
env_logger = "0.10.0"
smol = "^1.2"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.3"
rand = { version = "0.8.5" }

[features]
default = ["interfaces", "stores", "tokio", "std"]
embassy = ["dep:embassy-sync", "dep:embassy-futures", "dep:embassy-time", "dep:embassy-executor"]
tokio = ["dep:tokio", "dep:lazy_static"]
interfaces = []
stores = []
std = []
